kubernetes/auth/ory/kratos/testingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: ory
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80

  rules:
    - host: test.mischa.dk
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /ss/
            pathType: Prefix
  ingressClassName: traefik
status:
  loadBalancer: {}
